--- a/Internet shop.html
+++ b/Internet shop.html
@@ -1,98 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="style.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="styles.css"/>
     <meta charset="UTF-8">
-    <title>Shop</title>
+    <title>Food-shop</title>
 </head>
-<body class="main">
+<body>
+<div class = "whole_area">
+    <div class = "tables">
 
-<div class = "tables">
-    <div class="table1">
-           <div class="big_line_of_table1">
-                   <div class = "textarea_incside">
-                      <input class="big_textarea" type="text" placeholder="Назва товару">
-                       <button class = "button_add" > Додати </button>
-                      </div>
+    <div class = "first_table">
+        <div class="first_table_centre">
 
-        </div>
+            <div class="top_line_of_table1">
+               <div class="centre_of_top_line1">
+               <input class="big_text_area" type="text" placeholder="Назва товару">
+                   <button class="add"> Додати </button>
+               </div>
+            </div>
 
-        <div class="simple_line_of_table1">
-                <div class = "cell"><input class="simple_textarea"	type="text" value="Помідор"	></div>
-                <div class = "cell">
-                    <button class = "button_minus"> - </button>
-                    <button class = "button_result"> 3 </button>
-                    <button class = "button_plus"> + </button>
+            <div class="line_of_table1">
+                <div class="centre_line_of_table1">
+                    <div class="cell_name_of_goods">
+                        <span class="list_to_buy"> Помідори </span>
+                    </div>
+                    <div class="cell_with_count_buttons">
+                        <span class="tooltip" data-tooltip="Зменшити">  <button class="minus"> - </button> </span>
+                        <span class="tooltip" data-tooltip="Кількість товару">  <span class="count_of_good"> 1 </span> </span>
+                        <span class="tooltip" data-tooltip="Збільшити">  <button class="plus"> + </button></span>
+                    </div>
+                    <div class="cell_with_button_buy">
+                        <button class="bought">Куплено</button>
+                        <span class="tooltip" data-tooltip="Видалити">  <button class="cross"> x</button> </span>
+                    </div>
                 </div>
-
-                <button class = "button_buy" > Куплено </button>
-                <button class = "button_cross" > x </button>
-        </div>
-
-        <div class="simple_line_of_table1">
-            <div class = "cell"><input class="simple_textarea"	type="text" value="Сир"></div>
-            <div class = "cell">
-                <button class = "button_minus"> - </button>
-                <button class = "button_result"> 3 </button>
-                <button class = "button_plus"> + </button>
             </div>
 
-              <button class = "button_buy" > Куплено </button>
-            <button class = "button_cross" > x </button>
-        </div>
-
-        <div class="simple_line_of_table1">
-            <div class ="cell"><input	class="simple_textarea" type="text" value="Масло"></div>
-            <div class = "cell">
-                <button class = "button_minus"> - </button>
-                <button class = "button_result"> 3 </button>
-                <button class = "button_plus"> + </button>
+            <div class="line_of_table1">
+                <div class="centre_line_of_table1">
+                    <div class="cell_name_of_goods">
+                        <span class="list_to_buy"> Сир </span>
+                    </div>
+                    <div class="cell_with_count_buttons">
+                        <span class="tooltip" data-tooltip="Зменшити">  <button class="minus"> - </button> </span>
+                        <span class="tooltip" data-tooltip="Кількість товару">  <span class="count_of_good"> 2 </span> </span>
+                        <span class="tooltip" data-tooltip="Збільшити">  <button class="plus"> + </button></span>
+                    </div>
+                    <div class="cell_with_button_buy">
+                        <button class="bought">Куплено</button>
+                        <span class="tooltip" data-tooltip="Видалити">  <button class="cross"> x</button> </span>
+                    </div>
+                </div>
             </div>
-            <button class = "button_buy" > Куплено </button>
-            <button class = "button_cross" > x </button>
-       </div>
+
+            <div class="line_of_table1">
+                <div class="centre_line_of_table1">
+                    <div class="cell_name_of_goods">
+                        <span class="list_to_buy"> Масло </span>
+                    </div>
+                    <div class="cell_with_count_buttons">
+                        <span class="tooltip" data-tooltip="Зменшити">  <button class="minus"> - </button> </span>
+                        <span class="tooltip" data-tooltip="Кількість товару">  <span class="count_of_good"> 1 </span> </span>
+                        <span class="tooltip" data-tooltip="Збільшити">  <button class="plus"> + </button></span>
+                    </div>
+                    <div class="cell_with_button_buy">
+                        <button class="bought">Куплено</button>
+                        <span class="tooltip" data-tooltip="Видалити">  <button class="cross"> x</button> </span>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
-    <div class="table2">
-        <div class="simple_line_of_table2">
-            <div class= "text_of_simple_line_of_table2">
-                <h3> Залишилося </h3></div>
-        </div>
-        <div class="simple_line_of_table2">
-            <div class = "list_of_not_bought_products">
-                <span class="not_bought_product">
-                    <span class="text_of_not_bought_product">Помідор</span>
-                     <span class="circular_label_of_not_bought_product">3</span>
-                </span>
-                <span class="not_bought_product">
-                    <span class="text_of_not_bought_product">Сир</span>
-                     <span class="circular_label_of_not_bought_product">3</span>
-                </span>
-                <span class="not_bought_product">
-                    <span class="text_of_not_bought_product">Масло</span>
-                     <span class="circular_label_of_not_bought_product">3</span>
-                </span>
-            </div>
-        </div>
-        <div class="simple_line_of_table2">
-            <div class= "text_of_simple_line_of_table2">
-                <h3> Куплено </h3>
-            </div>
-        </div>
+    <div class ="second_table">
+        <div class="second_table_centre">
 
-        <div class="simple_line_of_table2">
+            <div class="top_line_of_table2">
+                <h3>Залишилось</h3>
+            </div>
+
+            <div class="line_of_table2">
+                <div class="list_to_buy">
+                <span class="one_bought_good">
+                    <span class="name_of_bought_good">Шинка</span>
+                    <span class="count_of_bought_good">3</span>
+                </span>
+                    <span class="one_bought_good">
+                    <span class="name_of_bought_good">Вода</span>
+                    <span class="count_of_bought_good">2</span>
+                </span>
+                    <span class="one_bought_good">
+                    <span class="name_of_bought_good">Чай</span>
+                    <span class="count_of_bought_good">1</span>
+                </span>
+                    <span class="one_bought_good">
+                    <span class="name_of_bought_good">Чай</span>
+                    <span class="count_of_bought_good">1</span>
+                </span>
+                    <span class="one_bought_good">
+                    <span class="name_of_bought_good">Чай</span>
+                    <span class="count_of_bought_good">1</span>
+                </span>
+                    <span class="one_bought_good">
+                    <span class="name_of_bought_good">Чай</span>
+                    <span class="count_of_bought_good">1</span>
+                </span>
+                    <span class="one_bought_good">
+                    <span class="name_of_bought_good">Чай</span>
+                    <span class="count_of_bought_good">1</span>
+                </span>
+
+                </div>
+            </div>
+
+            <div class="line_of_table2">
+                    <h3>Куплено</h3>
+            </div>
+
+            <div class="line_of_table2">
+
+            </div>
 
         </div>
+    </div>
     </div>
 </div>
 
 <div class = "badge">
     <div class="title"> Buy List </div>
-    <div class="created"> Created by me </div>
+    <div class="created"> Created by Oleksandra Radzievska </div>
 </div>
-
-
-
 
 </body>
 </html>
