--- a/Internet shop.html
+++ b/Internet shop.html
@@ -19,7 +19,7 @@
                </div>
             </div>
 
-            <div class="line_of_table1">
+            <div class="line_of_table1" style="display:none">
                 <div class="centre_line_of_table1">
                     <div class="cell_name_of_goods">
                         <span class="list_to_buy"> Помідори </span>
@@ -36,39 +36,7 @@
                 </div>
             </div>
 
-            <div class="line_of_table1">
-                <div class="centre_line_of_table1">
-                    <div class="cell_name_of_goods">
-                        <span class="list_to_buy"> Сир </span>
-                    </div>
-                    <div class="cell_with_count_buttons">
-                        <span class="tooltip" data-tooltip="Зменшити">  <button class="minus"> - </button> </span>
-                        <span class="tooltip" data-tooltip="Кількість товару">  <span class="count_of_good" > 2 </span> </span>
-                        <span class="tooltip" data-tooltip="Збільшити">  <button class="plus"> + </button></span>
-                    </div>
-                    <div class="cell_with_button_buy">
-                        <button class="buy">Куплено</button>
-                        <span class="tooltip" data-tooltip="Видалити">  <button class="cross"> x</button> </span>
-                    </div>
-                </div>
-            </div>
 
-            <div class="line_of_table1">
-                <div class="centre_line_of_table1">
-                    <div class="cell_name_of_goods">
-                        <span class="list_to_buy"> Масло </span>
-                    </div>
-                    <div class="cell_with_count_buttons">
-                        <span class="tooltip" data-tooltip="Зменшити">  <button class="minus"> - </button> </span>
-                        <span class="tooltip" data-tooltip="Кількість товару">  <span class="count_of_good"> 1 </span> </span>
-                        <span class="tooltip" data-tooltip="Збільшити">  <button class="plus"> + </button></span>
-                    </div>
-                    <div class="cell_with_button_buy">
-                        <button class="buy">Куплено</button>
-                        <span class="tooltip" data-tooltip="Видалити">  <button class="cross"> x</button> </span>
-                    </div>
-                </div>
-            </div>
         </div>
     </div>
 
@@ -82,26 +50,13 @@
             <div class="line_of_table2">
                 <div class="list_to_buy_second_table">
 
-                    <div class="one_bought_good">
+                    <div class="one_bought_good" style="display:none">
                         <span class="label_js">
                     <span class="name_of_bought_good">Помідори</span>
                     <span class="count_of_bought_good">1</span>
                         </span>
                 </div>
 
-                    <div class="one_bought_good">
-                        <span class="label_js">
-                        <span class="name_of_bought_good">Сир</span>
-                        <span class="count_of_bought_good">1</span>
-                        </span>
-                    </div>
-
-                    <span class="one_bought_good">
-                        <span class="label_js">
-                        <span class="name_of_bought_good">Масло</span>
-                        <span class="count_of_bought_good">1</span>
-                        </span>
-                    </span>
 
 
                 </div>
