--- a/Internet shop.html
+++ b/Internet shop.html
@@ -14,7 +14,7 @@
 
             <div class="top_line_of_table1">
                <div class="centre_of_top_line1">
-               <input id="big_text_area" type="text" placeholder="Назва товару">
+               <input class="big_text_area" type="text" placeholder="Назва товару">
                    <button class="add"> Додати </button>
                </div>
             </div>
@@ -22,7 +22,7 @@
             <div class="line_of_table1" style="display:none">
                 <div class="centre_line_of_table1">
                     <div class="cell_name_of_goods">
-                        <span class="list_to_buy"> Помідори </span>
+                        <span class="list_to_buy" > Помідори </span>
                     </div>
                     <div class="cell_with_count_buttons">
                         <span class="tooltip" data-tooltip="Зменшити">  <button class="minus"> - </button> </span>
@@ -30,7 +30,8 @@
                         <span class="tooltip" data-tooltip="Збільшити">  <button class="plus"> + </button></span>
                     </div>
                     <div class="cell_with_button_buy">
-                        <button class="buy">Куплено</button>
+                        <button class="buy">Купити</button>
+                        <button class="unbuy">Куплено</button>
                         <span class="tooltip" data-tooltip="Видалити">  <button class="cross"> x</button> </span>
                     </div>
                 </div>
