--- a/Internet shop.html
+++ b/Internet shop.html
@@ -23,6 +23,7 @@
                 <div class="centre_line_of_table1">
                     <div class="cell_name_of_goods">
                         <span class="list_to_buy" > Помідори </span>
+                        <input class="change" type="text" style="display:none">
                     </div>
                     <div class="cell_with_count_buttons">
                         <span class="tooltip" data-tooltip="Зменшити">  <button class="minus"> - </button> </span>
