--- a/Internet shop.html
+++ b/Internet shop.html
@@ -31,8 +31,7 @@
                         <span class="tooltip" data-tooltip="Збільшити">  <button class="plus"> + </button></span>
                     </div>
                     <div class="cell_with_button_buy">
-                        <button class="buy">Купити</button>
-                        <button class="unbuy">Куплено</button>
+                       <span class="tooltip" data-tooltip="Купити товар">  <button class="buy">Купити</button></span>
                         <span class="tooltip" data-tooltip="Видалити">  <button class="cross"> x</button> </span>
                     </div>
                 </div>
