--- a/Internet shop.html
+++ b/Internet shop.html
@@ -14,7 +14,7 @@
 
             <div class="top_line_of_table1">
                <div class="centre_of_top_line1">
-               <input class="big_text_area" type="text" placeholder="Назва товару">
+               <input class="big_text_area" type="text" maxlength="25" placeholder="Назва товару">
                    <button class="add"> Додати </button>
                </div>
             </div>
@@ -23,7 +23,7 @@
                 <div class="centre_line_of_table1">
                     <div class="cell_name_of_goods">
                         <span class="list_to_buy" > Помідори </span>
-                        <input class="change" type="text" style="display:none">
+                        <input class="change" type="text" maxlength="25" style="display:none">
                     </div>
                     <div class="cell_with_count_buttons">
                         <span class="tooltip" data-tooltip="Зменшити">  <button class="minus"> - </button> </span>
